[build-system]
requires = ["setuptools>=68.2.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Auto discover
#packages = [
#    "lmwrapper",
#    "lmwrapper.huggingface_wrapper",
#    "lmwrapper.openai_wrapper",
#]
#py-modules = ["lmwrapper"]

[tool.setuptools.packages.find]
where = ["."]
include = ["lmwrapper*"]

[project]
name = "lmwrapper"
version = "0.10.0.0"
authors = [
    { name = "David Gros" },
    { name = "Claudio Spiess" },
]
description = "Wrapper around language model APIs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
keywords = ["large language models", "openai"]
dependencies = [
    "openai~=1.33.0",
    #"diskcache~=5.6.3",
    #"joblib~=1.3.2",
    "tiktoken~=0.5.1",
    "ratemate~=0.1",
    "humanize~=4.8.0",
    "xxhash~=3.4",
    "numpy~=1"
]

[project.optional-dependencies]
dev = ["black~=23.10.0", "ruff~=0.1.1", "pytest~=7.4.2", "pytest-cov~=4.1.0"]
quant = ["bitsandbytes~=0.41.1"]
hf = ["torch~=2.1.0", "transformers~=4.34.1"]
# Torch nightlies can be installed as follows:
# CPU: pip3 install --pre torch --index-url https://download.pytorch.org/whl/nightly/cpu
# CUDA: pip3 install --pre torch --index-url https://download.pytorch.org/whl/nightly/cu121
#hf-dev = [
#    "torch>=2.1.0",
#    "transformers @ git+https://github.com/huggingface/transformers",
#]
accelerate = ["accelerate~=0.23.0"]
xformers = ["xformers~=0.0.22"]
flash-attn = [ "flash_attn~=2.3.2"]
ort = ["optimum[onnxruntime]~=1.13.2"]
# This will also install accelerate:
ort-gpu = ["optimum[onnxruntime-gpu]~=1.13.2"]

[project.urls]
"Homepage" = "https://github.com/DaiseyCode/lmwrapper"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
fix-only = true
line-length = 88
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    "B",
    "Q",
    "TID",
    # "C90",
    "N",
    "D",
    "UP",
    "ANN",
    "S",
    "BLE",
    "FBT",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "RUF",
    "ERA",
]

ignore = [
    # missing-type-function-argument (ANN001)
    "ANN001",

    # missing-type-args (ANN002)
    "ANN002",

    # missing-type-kwargs (ANN003)
    "ANN003",

    # missing-type-self (ANN101)
    "ANN101",

    # missing-type-cls (ANN102)
    "ANN102",

    # missing-return-type-undocumented-public-function (ANN201)
    "ANN201",

    # missing-return-type-private-function (ANN202)
    "ANN202",

    # missing-return-type-special-method (ANN204)
    "ANN204",

    # any-type (ANN401)
    "ANN401",

    # unused-function-argument (ARG001)
    "ARG001",

    # unused-method-argument (ARG002)
    "ARG002",

    # blind-except (BLE001)
    "BLE001",

    # undocumented-public-module (D100)
    "D100",

    # undocumented-public-class (D101)
    "D101",

    # undocumented-public-method (D102)
    "D102",

    # undocumented-public-function (D103)
    "D103",

    # undocumented-public-package (D104)
    "D104",

    # undocumented-magic-method (D105)
    "D105",

    # undocumented-public-nested-class (D106)
    "D106",

    # undocumented-public-init (D107)
    "D107",

    # one-blank-line-before-class (D203)
    "D203",

    # blank-line-after-summary (D205)
    "D205",

    # multi-line-summary-first-line (D212)
    "D212",

    # non-imperative-mood (D401)
    "D401",

    # line-too-long (E501)
    "E501",

    # boolean-positional-arg-in-function-definition (FBT001)
    "FBT001",

    # boolean-default-value-in-function-definition (FBT002)
    "FBT002",

    # implicit-namespace-package (INP001)
    "INP001",

    # try-except-in-loop (PERF203)
    "PERF203",

    # too-many-branches (PLR0912)
    "PLR0912",

    # too-many-arguments (PLR0913)
    "PLR0913",

    # too-many-statements (PLR0915)
    "PLR0915",

    # magic-value-comparison (PLR2004)
    "PLR2004",

    # assert (S101)
    "S101",

    # exec-builtin (S102)
    "S102",

    # suspicious-xml-element-tree-usage (S314)
    "S314",

    # start-process-with-a-shell (S605)
    "S605",

    # private-member-access (SLF001)
    "SLF001",

    # raise-vanilla-class (TRY002)
    "TRY002",

    # ends-in-period (D400)
    "D400",

    # ends-in-punctuation (D415)
    "D415",

    # suspicious-non-cryptographic-random-usage (S311)
    "S311",

    # subprocess-without-shell-equals-true (S603)
    "S603",

    # start-process-with-partial-path (S607)
    "S607",

    # suspicious-xmle-tree-usage (S320)
    "S320",

    # suspicious-xml-mini-dom-usage (S318)
    "S318",
    # Commented out code
    "ERA001",
    # No space after block comment
    "E265",

]
